--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsdom": "1.5.0",
     "jshint-stylish": "1.0.0",
     "lodash": "2.4.1",
+    "mkdirp": "0.5.0",
     "mocha": "2.0.1",
     "mochify": "2.1.0",
     "nock": "0.52.4",
