--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-koa-seed",
   "private": true,
-  "version": "0.3.0",
+  "version": "0.4.0",
   "dependencies": {
     "bluebird": "2.3.11",
     "browserify": "6.3.2",
@@ -19,8 +19,11 @@
     "build-meta-data": "0.1.2",
     "chai": "1.10.0",
     "chai-as-promised": "4.1.1",
+    "cli-table": "^0.3.1",
     "co": "4.0.1",
+    "colors": "1.0.3",
     "del": "1.0.0",
+    "escomplex-js": "1.0.0",
     "glob": "4.3.1",
     "glob-array": "0.1.2",
     "gulp": "3.8.10",
@@ -31,9 +34,11 @@
     "gulp-streamify": "0.0.5",
     "gulp-uglifyjs": "0.5.0",
     "gulp-util": "3.0.1",
+    "istanbul": "git://github.com/gotwarlost/istanbul.git#c6f8fc8b102cfa4e4455d6a165485b38cb58160c",
     "jsdom": "1.5.0",
     "jshint-stylish": "1.0.0",
     "lodash": "2.4.1",
+    "mkdirp": "0.5.0",
     "mocha": "2.0.1",
     "mochify": "2.1.0",
     "nock": "0.52.4",
