--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "dependencies": {
     "bluebird": "2.3.11",
     "browserify": "6.3.2",
-    "co-sleep": "0.0.1",
-    "koa": "0.13.0",
-    "koa-bodyparser": "1.3.0",
-    "koa-send": "1.3.1",
     "superagent": "0.21.0",
     "fluxe": "0.1.0",
+    "lodash": "2.4.1",
     "react-router": "0.11.4"
   },
   "devDependencies": {
@@ -19,11 +16,11 @@
     "build-meta-data": "0.1.2",
     "chai": "1.10.0",
     "chai-as-promised": "4.1.1",
-    "cli-table": "^0.3.1",
-    "co": "4.0.1",
+    "cli-table": "0.3.1",
     "colors": "1.0.3",
     "del": "1.0.0",
     "escomplex-js": "1.0.0",
+    "fibers": "1.0.5",
     "glob": "4.3.1",
     "glob-array": "0.1.2",
     "gulp": "3.8.10",
@@ -37,7 +34,6 @@
     "istanbul": "git://github.com/gotwarlost/istanbul.git#c6f8fc8b102cfa4e4455d6a165485b38cb58160c",
     "jsdom": "1.5.0",
     "jshint-stylish": "1.0.0",
-    "lodash": "2.4.1",
     "mkdirp": "0.5.0",
     "mocha": "2.0.1",
     "mochify": "2.1.0",
