--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "0.4.0",
   "dependencies": {
     "bluebird": "2.3.11",
-    "superagent": "0.21.0",
-    "fluxe": "0.1.0",
+    "eventemitter3": "0.1.6",
     "lodash": "2.4.1",
-    "react-router": "0.11.4"
+    "object-assign": "2.0.0",
+    "react-router": "0.11.4",
+    "superagent": "0.21.0"
   },
   "devDependencies": {
     "async": "0.9.0",
