--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
-  "name": "react-koa-seed",
-  "version": "0.3.0",
+  "name": "react-seed",
+  "private": true,
+  "version": "0.6.0",
   "dependencies": {},
   "devDependencies": {}
 }
