--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-koa-seed",
+  "name": "react-seed",
   "private": true,
-  "version": "0.4.0",
+  "version": "0.6.0",
   "dependencies": {
     "bluebird": "2.3.11",
     "eventemitter3": "0.1.6",
