added messageformat to devDependencies added api mocking solution (#4)

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 .DS_Store
 .idea
 /bower_components/*
+/web/components/*
 .sass-cache/*
 /web/.sass-cache/*
 /coverage/*
 /node_modules/*
 /gulp/build-meta-data/*
 /web/build/*
+npm-debug.log
