--- a/bower.json
+++ b/bower.json
@@ -3,5 +3,7 @@
   "private": true,
   "version": "0.6.0",
   "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "backend": "0.2.2"
+  }
 }
