--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "istanbul": "git://github.com/gotwarlost/istanbul.git#c6f8fc8b102cfa4e4455d6a165485b38cb58160c",
     "jsdom": "1.5.0",
     "jshint-stylish": "1.0.0",
+    "messageformat": "0.2.1",
     "mkdirp": "0.5.0",
     "mocha": "2.0.1",
     "mochify": "2.1.0",
