--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "gulp-complexity": "0.3.0",
     "gulp-help": "1.3.1",
     "gulp-htmlmin": "0.2.0",
-    "gulp-jshint": "1.9.0",
     "gulp-streamify": "0.0.5",
     "gulp-uglifyjs": "0.5.0",
     "gulp-util": "3.0.1",
     "istanbul": "git://github.com/gotwarlost/istanbul.git#c6f8fc8b102cfa4e4455d6a165485b38cb58160c",
     "jsdom": "1.5.0",
     "jshint-stylish": "1.0.0",
+    "jshint": "2.6.3",
     "messageformat": "0.2.1",
     "mkdirp": "0.5.0",
     "mocha": "2.0.1",
