--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "colors": "1.0.3",
     "del": "1.0.0",
     "escomplex-js": "1.0.0",
+    "esprima-fb": "13001.1001.0-dev-harmony-fb",
     "fibers": "1.0.5",
     "glob": "4.3.1",
     "glob-array": "0.1.2",
@@ -31,9 +32,10 @@
     "gulp-uglifyjs": "0.5.0",
     "gulp-util": "3.0.1",
     "istanbul": "git://github.com/gotwarlost/istanbul.git#c6f8fc8b102cfa4e4455d6a165485b38cb58160c",
+    "jscs": "jscs-dev/node-jscs#master",
     "jsdom": "1.5.0",
-    "jshint-stylish": "1.0.0",
     "jshint": "2.6.3",
+    "jshint-stylish": "1.0.0",
     "messageformat": "0.2.1",
     "mkdirp": "0.5.0",
     "mocha": "2.0.1",
