--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cli-table": "0.3.1",
     "colors": "1.0.3",
     "del": "1.0.0",
+    "envify": "3.3.0",
     "escomplex-js": "1.0.0",
     "eslint": "0.16.0",
     "fibers": "1.0.5",
