--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "sinon-chai": "2.6.0",
     "string-format": "0.2.1",
     "through2": "0.6.3",
-    "vinyl-source-stream": "1.0.0"
+    "vinyl-source-stream": "1.0.0",
+    "wrench": "1.5.8"
   },
   "engines": {
     "node": ">=0.11.9"
