--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-tools": "0.12.1",
     "reactify": "0.17.1",
     "run-sequence": "1.0.2",
+    "ryanzec-mocked-backend": "0.1.0",
     "sinon": "1.12.1",
     "sinon-chai": "2.6.0",
     "string-format": "0.2.1",
