updated eslint and added react eslint plugin more refactoring to make it easier to unit testing react router components other general code refactoring

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,7 @@
 {
+  "plugins": [
+    "react"
+  ],
   "ecmaFeatures": {
     //this needs to be set to false to prevent false error based on this bug (https://github.com/eslint/eslint/issues/1969)
     "globalReturn": false,
@@ -12,6 +15,25 @@
     "document": true
   },
   "rules": {
+    //react
+    "react/display-name": 2,
+    //TODO: enforcing the double quotes for some reason is not working
+    "react/jsx-quotes": 0,//[
+    //  2,
+    //  "double",
+    //  "avoid-escape"
+    //],
+    "react/jsx-no-undef": 2,
+    "react/jsx-uses-react": 2,
+    "react/jsx-uses-vars": 2,
+    "react/no-did-mount-set-state": 0,
+    "react/no-did-update-set-state": 0,
+    "react/no-multi-comp":2,
+    "react/prop-types": 2,
+    "react/react-in-jsx-scope": 0,
+    "react/self-closing-comp": 2,
+    "react/wrap-multilines": 2,
+
     //possible errors
     "comma-dangle": [
       2,
@@ -36,7 +58,7 @@
     "no-func-assign": 2,
     "no-inner-declarations": 2,
     "no-invalid-regexp": 2,
-    "no-irregular-whitespace": 2,
+    "no-irregular-whitespace": 0,
     "no-negated-in-lhs": 2,
     "no-obj-calls": 2,
     "no-regex-spaces": 2,
