--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bluebird": "2.3.11",
     "eventemitter3": "0.1.6",
     "lodash": "2.4.1",
+    "moment": "2.9.0",
     "object-assign": "2.0.0",
     "react-router": "0.12.4",
     "schema-inspector": "1.5.1",
@@ -22,7 +23,8 @@
     "del": "1.0.0",
     "envify": "3.3.0",
     "escomplex-js": "1.0.0",
-    "eslint": "0.16.0",
+    "eslint-plugin-react": "1.6.0",
+    "eslint": "0.17.1",
     "fibers": "1.0.5",
     "glob": "4.3.1",
     "glob-array": "0.1.2",
