--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bluebird": "2.3.11",
     "eventemitter3": "0.1.6",
+    "jsuri": "1.3.0",
     "lodash": "2.4.1",
     "moment": "2.9.0",
     "object-assign": "2.0.0",
@@ -41,12 +42,12 @@
     "mkdirp": "0.5.0",
     "mocha": "2.0.1",
     "mochify": "2.1.0",
-    "nock": "0.52.4",
+    "nock": "1.2.1",
     "react": "0.12.1",
     "react-tools": "0.12.1",
     "reactify": "0.17.1",
     "run-sequence": "1.0.2",
-    "ryanzec-mocked-backend": "0.1.0",
+    "ryanzec-mocked-backend": "0.1.2",
     "sinon": "1.12.1",
     "sinon-chai": "2.6.0",
     "string-format": "0.2.1",
