--- a/package.json
+++ b/package.json
@@ -3,56 +3,56 @@
   "private": true,
   "version": "0.8.0",
   "dependencies": {
-    "bluebird": "2.3.11",
+    "bluebird": "2.9.21",
     "eventemitter3": "0.1.6",
     "jsuri": "1.3.0",
-    "lodash": "2.4.1",
+    "lodash": "3.6.0",
     "moment": "2.9.0",
     "object-assign": "2.0.0",
-    "react-router": "0.12.4",
+    "react": "0.13.1",
+    "react-router": "0.13.2",
     "schema-inspector": "1.5.1",
-    "superagent": "0.21.0"
+    "superagent": "1.1.0"
   },
   "devDependencies": {
     "async": "0.9.0",
-    "browserify": "6.3.3",
+    "browserify": "9.0.4",
     "build-meta-data": "0.1.2",
-    "chai": "1.10.0",
-    "chai-as-promised": "4.1.1",
+    "chai": "2.2.0",
+    "chai-as-promised": "4.3.0",
     "cli-table": "0.3.1",
     "colors": "1.0.3",
-    "del": "1.0.0",
-    "envify": "3.3.0",
-    "escomplex-js": "1.0.0",
-    "eslint-plugin-react": "1.6.0",
-    "eslint": "0.17.1",
+    "del": "1.1.1",
+    "envify": "3.4.0",
+    "escomplex-js": "1.2.0",
+    "eslint-plugin-react": "2.0.2",
+    "eslint": "0.18.0",
     "fibers": "1.0.5",
-    "glob": "4.3.1",
+    "glob": "5.0.3",
     "glob-array": "0.1.2",
-    "gulp": "3.8.10",
+    "gulp": "3.8.11",
     "gulp-complexity": "0.3.0",
-    "gulp-help": "1.3.1",
-    "gulp-htmlmin": "0.2.0",
+    "gulp-help": "1.3.4",
+    "gulp-htmlmin": "1.1.1",
     "gulp-streamify": "0.0.5",
-    "gulp-uglifyjs": "0.5.0",
-    "gulp-util": "3.0.1",
-    "istanbul": "git://github.com/gotwarlost/istanbul.git#c6f8fc8b102cfa4e4455d6a165485b38cb58160c",
-    "jsdom": "1.5.0",
+    "gulp-uglifyjs": "0.6.1",
+    "gulp-util": "3.0.4",
+    "istanbul": "0.3.13",
+    "jsdom": "3.1.2",
     "messageformat": "0.2.1",
     "mkdirp": "0.5.0",
-    "mocha": "2.0.1",
-    "mochify": "2.1.0",
-    "nock": "1.2.1",
-    "react": "0.12.1",
-    "react-tools": "0.12.1",
-    "reactify": "0.17.1",
+    "mocha": "2.2.1",
+    "mochify": "2.7.0",
+    "nock": "1.4.0",
+    "react-tools": "0.13.1",
+    "reactify": "1.1.0",
     "run-sequence": "1.0.2",
     "ryanzec-mocked-backend": "0.1.2",
-    "sinon": "1.12.1",
-    "sinon-chai": "2.6.0",
-    "string-format": "0.2.1",
+    "sinon": "1.14.1",
+    "sinon-chai": "2.7.0",
+    "string-format": "0.5.0",
     "through2": "0.6.3",
-    "vinyl-source-stream": "1.0.0",
+    "vinyl-source-stream": "1.1.0",
     "wrench": "1.5.8"
   },
   "engines": {
