--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,8 @@
     "setTimeout": true,
     "window": true,
     "document": true,
-    "alert": true
+    "console": true,
+    "confirm": true
   },
   "rules": {
     //react
@@ -103,7 +104,7 @@
     "no-new-wrappers": 2,
     "no-octal": 2,
     "no-octal-escape": 2,
-    "no-process-env": 2,
+    "no-process-env": 0,
     "no-proto": 2,
     "no-redeclare": 2,
     "no-return-assign": 2,
