--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "0.13.1",
     "react-router": "0.13.2",
     "schema-inspector": "1.5.1",
+    "store-cacheable": "0.1.0",
     "superagent": "1.1.0"
   },
   "devDependencies": {
