--- a/package.json
+++ b/package.json
@@ -5,39 +5,44 @@
   "dependencies": {
     "bluebird": "2.9.21",
     "eventemitter3": "0.1.6",
+    "immutable": "3.7.6",
     "jsuri": "1.3.0",
     "lodash": "3.6.0",
     "moment": "2.9.0",
     "object-assign": "2.0.0",
-    "react": "0.13.1",
-    "react-router": "0.13.2",
+    "react": "0.14.7",
+    "react-dom": "0.14.7",
+    "react-redux": "4.4.0",
+    "react-router": "2.0.0",
+    "react-router-redux": "4.0.0-beta.1",
+    "redux": "3.3.1",
     "schema-inspector": "1.5.1",
     "store-cacheable": "0.1.0",
     "superagent": "1.1.0"
   },
   "devDependencies": {
     "async": "0.9.0",
+    "babel-core": "6.4.5",
+    "babel-loader": "6.2.1",
+    "babel-plugin-transform-react-jsx": "6.5.0",
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-react": "6.3.13",
     "browserify": "9.0.4",
     "build-meta-data": "0.1.2",
     "chai": "2.2.0",
     "chai-as-promised": "4.3.0",
     "cli-table": "0.3.1",
     "colors": "1.0.3",
+    "css-loader": "0.23.1",
     "del": "1.1.1",
     "envify": "3.4.0",
     "escomplex-js": "1.2.0",
-    "eslint-plugin-react": "2.0.2",
     "eslint": "0.18.0",
-    "fibers": "1.0.5",
+    "eslint-plugin-react": "2.0.2",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.8.5",
     "glob": "5.0.3",
     "glob-array": "0.1.2",
-    "gulp": "3.8.11",
-    "gulp-complexity": "0.3.0",
-    "gulp-help": "1.3.4",
-    "gulp-htmlmin": "1.1.1",
-    "gulp-streamify": "0.0.5",
-    "gulp-uglifyjs": "0.6.1",
-    "gulp-util": "3.0.4",
     "istanbul": "0.3.13",
     "jsdom": "3.1.2",
     "messageformat": "0.2.1",
@@ -45,15 +50,20 @@
     "mocha": "2.2.1",
     "mochify": "2.7.0",
     "nock": "1.4.0",
-    "react-tools": "0.13.1",
+    "node-sass": "3.4.2",
     "reactify": "1.1.0",
     "run-sequence": "1.0.2",
     "ryanzec-mocked-backend": "0.1.2",
+    "sass-loader": "3.1.2",
+    "script-loader": "0.6.1",
     "sinon": "1.14.1",
     "sinon-chai": "2.7.0",
     "string-format": "0.5.0",
+    "style-loader": "0.13.0",
     "through2": "0.6.3",
+    "url-loader": "0.5.7",
     "vinyl-source-stream": "1.1.0",
+    "webpack": "1.12.12",
     "wrench": "1.5.8"
   },
   "engines": {
