--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "private": true,
   "version": "0.11.0",
   "dependencies": {
-    "bluebird": "2.9.21",
+    "bluebird": "3.3.1",
     "immutable": "3.7.6",
-    "jsuri": "1.3.0",
-    "lodash": "3.6.0",
-    "moment": "2.9.0",
+    "jsuri": "1.3.1",
+    "lodash.assign": "4.0.4",
+    "lodash.foreach": "4.1.0",
+    "messageformat": "0.3.0",
+    "moment": "2.11.2",
     "react": "0.14.7",
     "react-dom": "0.14.7",
     "react-redux": "4.4.0",
@@ -15,36 +17,43 @@
     "react-router-redux": "4.0.0-beta.1",
     "redux": "3.3.1",
     "store-cacheable": "0.1.0",
-    "superagent": "1.1.0"
+    "superagent": "1.7.2"
   },
   "devDependencies": {
-    "babel-core": "6.4.5",
+    "babel-cli": "6.5.1",
+    "babel-core": "6.5.2",
     "babel-eslint": "5.0.0",
-    "babel-loader": "6.2.1",
-    "babel-plugin-transform-react-jsx": "6.5.0",
-    "babel-preset-es2015": "6.3.13",
-    "babel-preset-react": "6.3.13",
-    "build-meta-data": "0.1.2",
-    "chai": "2.2.0",
-    "chai-as-promised": "4.3.0",
+    "babel-istanbul": "0.6.0",
+    "babel-loader": "6.2.3",
+    "babel-plugin-transform-react-jsx": "6.5.2",
+    "babel-preset-es2015": "6.5.0",
+    "babel-preset-react": "6.5.0",
+    "chai": "3.5.0",
+    "co": "4.6.0",
     "css-loader": "0.23.1",
-    "eslint": "2.1.0",
-    "eslint-plugin-react": "2.0.2",
+    "eslint": "2.2.0",
+    "eslint-plugin-react": "4.0.0",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
-    "jsdom": "^8.0.4",
-    "messageformat": "0.2.1",
-    "mocha": "2.2.1",
+    "glob-array": "0.1.2",
+    "jsdom": "8.0.4",
+    "mocha": "2.4.5",
+    "mocha-generators": "1.2.0",
+    "nock": "7.2.2",
     "node-sass": "3.4.2",
-    "ryanzec-mocked-backend": "0.1.2",
+    "react-addons-test-utils": "0.14.7",
+    "react-stub-context": "0.4.0",
+    "ryanzec-mocked-backend": "0.2.7",
     "sass-loader": "3.1.2",
     "script-loader": "0.6.1",
-    "sinon": "1.14.1",
-    "sinon-chai": "2.7.0",
-    "string-format": "0.5.0",
+    "sinon": "1.17.3",
+    "sinon-chai": "2.8.0",
+    "string.format": "1.3.0",
     "style-loader": "0.13.0",
     "url-loader": "0.5.7",
-    "webpack": "1.12.12"
+    "webdriver-manager": "8.0.0",
+    "webdriverio": "3.2.6",
+    "webpack": "1.12.13"
   },
   "engines": {
     "node": ">=0.11.9"
