--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-istanbul": "0.6.0",
     "babel-loader": "6.2.3",
     "babel-plugin-transform-react-jsx": "6.5.2",
+    "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "6.5.0",
     "babel-preset-react": "6.5.0",
     "chai": "3.5.0",
