--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "bluebird": "3.3.1",
     "immutable": "3.7.6",
     "jsuri": "1.3.1",
-    "lodash.assign": "4.0.4",
     "lodash.foreach": "4.1.0",
     "messageformat": "0.3.0",
     "moment": "2.11.2",
@@ -26,7 +25,7 @@
     "babel-istanbul": "0.6.0",
     "babel-loader": "6.2.3",
     "babel-plugin-transform-react-jsx": "6.5.2",
-    "babel-polyfill": "^6.5.0",
+    "babel-polyfill": "6.5.0",
     "babel-preset-es2015": "6.5.0",
     "babel-preset-react": "6.5.0",
     "chai": "3.5.0",
