switched from babel-istanbul to using the alpha version of 1.0 of standard istanbul which seems to work with babel-node

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "babel-cli": "6.5.1",
     "babel-core": "6.5.2",
     "babel-eslint": "5.0.0",
-    "babel-istanbul": "0.6.1",
     "babel-loader": "6.2.3",
     "babel-plugin-transform-react-jsx": "6.5.2",
     "babel-polyfill": "6.5.0",
@@ -37,6 +36,7 @@
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
     "glob-array": "0.1.2",
+    "istanbul": "1.0.0-alpha.2",
     "jsdom": "8.0.4",
     "mocha": "2.4.5",
     "mocha-generators": "1.2.0",
