--- a/.istanbul.yml.example
+++ b/.istanbul.yml.example
@@ -1,5 +1,8 @@
 instrumentation:
-  extensions: ['.js', '.jsx']
+  extensions: [
+    '.js',
+    '.jsx'
+  ]
   excludes: [
     'web/app/framework/assets/utilities/dom/dom-dimensions.js',
     'web/app/framework/assets/utilities/dom/dom-event-manager.js'
