--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "superagent": "1.7.2"
   },
   "devDependencies": {
+    "autoprefixer": "6.3.6",
     "babel-cli": "6.5.1",
     "babel-core": "6.5.2",
     "babel-eslint": "5.0.0",
@@ -42,6 +43,8 @@
     "mocha-generators": "1.2.0",
     "nock": "7.2.2",
     "node-sass": "3.4.2",
+    "postcss-loader": "0.8.2",
+    "precss": "1.4.0",
     "react-addons-test-utils": "0.14.7",
     "react-stub-context": "0.4.0",
     "ryanzec-mocked-backend": "0.2.7",
