--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lodash.foreach": "4.1.0",
     "messageformat": "0.3.0",
     "moment": "2.11.2",
+    "moment-timezone": "0.5.4",
     "react": "0.14.7",
     "react-dom": "0.14.7",
     "react-redux": "4.4.0",
@@ -39,9 +40,9 @@
     "glob-array": "0.1.2",
     "istanbul": "1.0.0-alpha.2",
     "jsdom": "8.0.4",
+    "json-loader": "0.5.4",
     "mocha": "2.4.5",
     "mocha-generators": "1.2.0",
-    "nock": "7.2.2",
     "node-sass": "3.4.2",
     "postcss-loader": "0.8.2",
     "precss": "1.4.0",
