--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-seed",
   "private": true,
-  "version": "0.11.0",
+  "version": "0.12.0",
   "dependencies": {
     "bluebird": "3.3.1",
     "immutable": "3.7.6",
@@ -13,8 +13,9 @@
     "react": "0.14.7",
     "react-dom": "0.14.7",
     "react-redux": "4.4.0",
-    "react-router": "2.0.0",
+    "react-router": "2.3.0",
     "react-router-redux": "4.0.0-beta.1",
+    "react-router-scroll": "0.2.0",
     "redux": "3.3.1",
     "reselect": "2.0.3",
     "store-cacheable": "0.1.0",
