--- a/package.json
+++ b/package.json
@@ -3,63 +3,66 @@
   "private": true,
   "version": "0.12.0",
   "dependencies": {
-    "bluebird": "3.3.1",
-    "immutable": "3.7.6",
+    "bluebird": "3.4.1",
+    "history": "2.1.2",
+    "immutable": "3.8.1",
     "jsuri": "1.3.1",
-    "lodash.foreach": "4.1.0",
-    "messageformat": "0.3.0",
-    "moment": "2.11.2",
-    "moment-timezone": "0.5.4",
-    "react": "0.14.7",
-    "react-dom": "0.14.7",
-    "react-redux": "4.4.0",
-    "react-router": "2.3.0",
-    "react-router-redux": "4.0.0-beta.1",
-    "react-router-scroll": "0.2.0",
-    "redux": "3.3.1",
-    "reselect": "2.0.3",
+    "lodash": "4.15.0",
+    "messageformat": "0.3.1",
+    "moment": "2.14.1",
+    "moment-timezone": "0.5.5",
+    "react": "15.3.1",
+    "react-dom": "15.3.1",
+    "react-redux": "4.4.5",
+    "react-router": "2.7.0",
+    "react-router-redux": "4.0.5",
+    "react-router-scroll": "0.3.1",
+    "redux": "3.5.2",
+    "reselect": "2.5.3",
     "store-cacheable": "0.1.0",
-    "superagent": "1.7.2"
+    "superagent": "2.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "6.3.6",
-    "babel-cli": "6.5.1",
-    "babel-core": "6.5.2",
-    "babel-eslint": "5.0.0",
-    "babel-loader": "6.2.3",
-    "babel-plugin-transform-react-jsx": "6.5.2",
-    "babel-polyfill": "6.5.0",
-    "babel-preset-es2015": "6.5.0",
-    "babel-preset-react": "6.5.0",
+    "autoprefixer": "6.4.0",
+    "babel-cli": "6.11.4",
+    "babel-core": "6.13.2",
+    "babel-eslint": "6.1.2",
+    "babel-loader": "6.2.5",
+    "babel-plugin-transform-react-jsx": "6.8.0",
+    "babel-polyfill": "6.13.0",
+    "babel-preset-es2015-without-strict-loose": "1.0.1",
+    "babel-preset-react": "6.11.1",
+    "babel-register": "6.11.6",
     "chai": "3.5.0",
     "co": "4.6.0",
     "css-loader": "0.23.1",
-    "eslint": "2.2.0",
-    "eslint-plugin-react": "4.0.0",
+    "eslint": "3.3.1",
+    "eslint-plugin-react": "6.1.2",
     "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.8.5",
+    "file-loader": "0.9.0",
     "glob-array": "0.1.2",
-    "istanbul": "1.0.0-alpha.2",
-    "jsdom": "8.0.4",
+    "istanbul": "1.1.0-alpha.1",
+    "jsdom": "9.4.2",
     "json-loader": "0.5.4",
-    "mocha": "2.4.5",
-    "mocha-generators": "1.2.0",
-    "node-sass": "3.4.2",
-    "postcss-loader": "0.8.2",
+    "mocha": "3.0.2",
+    "node-sass": "3.8.0",
+    "postcss-loader": "0.10.1",
     "precss": "1.4.0",
-    "react-addons-test-utils": "0.14.7",
-    "react-stub-context": "0.4.0",
+    "react-addons-test-utils": "15.3.1",
+    "react-stub-context": "0.7.0",
     "ryanzec-mocked-backend": "0.2.7",
-    "sass-loader": "3.1.2",
-    "script-loader": "0.6.1",
-    "sinon": "1.17.3",
+    "sass-loader": "4.0.0",
+    "script-loader": "0.7.0",
+    "sinon": "1.17.5",
     "sinon-chai": "2.8.0",
-    "string.format": "1.3.0",
-    "style-loader": "0.13.0",
+    "string.format": "1.3.1",
+    "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webdriver-manager": "8.0.0",
-    "webdriverio": "3.2.6",
-    "webpack": "1.12.13"
+    "wdio-mocha-framework": "0.4.0",
+    "wdio-spec-reporter": "0.0.3",
+    "webdriver-manager": "10.2.2",
+    "webdriverio": "4.2.7",
+    "webpack": "1.13.2"
   },
   "engines": {
     "node": ">=0.11.9"
